identification interface revision

--- a/app/assets/javascripts/identification/create/view.html
+++ b/app/assets/javascripts/identification/create/view.html
@@ -2,7 +2,7 @@
     <div class="ibox-title">
         <h5>ID Scanner</h5>
         <div class="ibox-tools">
-            <a ui-sref="index.identification" class="close-link">
+            <a ng-click="identificationCreate.back()" class="close-link">
                 <i class="fa fa-times"></i>
             </a>
         </div>
