--- a/app/assets/javascripts/visitor/index/view.html
+++ b/app/assets/javascripts/visitor/index/view.html
@@ -1,203 +1,116 @@
 <div class="wrapper wrapper-content">
-    <!-- <div class="row">
 
-        <div class="col-sm-3">
-          <div class="ibox float-e-margins">
-              <div class="ibox-title">
-                  <span class="label label-success pull-right">Today</span>
-                  <h5>Visitors</h5>
-              </div>
-              <div class="ibox-content">
-                  <h1 class="no-margins">{{visitor.data.total_visitors_today | number}}</h1>
-              </div>
-          </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5>Filter</h5>
         </div>
-
-        <div class="col-sm-3">
-          <div class="ibox float-e-margins">
-              <div class="ibox-title">
-                  <span class="label label-success pull-right">Today</span>
-                  <h5>Login In</h5>
+        <div class="ibox-content">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Visitors Name</label>
+                <input ng-model="visitor.filter.visitor_name" type="text" class="form-control">
               </div>
-              <div class="ibox-content">
-                  <h1 class="no-margins">{{visitor.data.total_visitors_login_today | number}}</h1>
-              </div>
-          </div>
-        </div>
-
-        <div class="col-sm-3">
-          <div class="ibox float-e-margins">
-              <div class="ibox-title">
-                  <span class="label label-success pull-right">Today</span>
-                  <h5>Log out</h5>
-              </div>
-              <div class="ibox-content">
-                  <h1 class="no-margins">{{visitor.data.total_visitors_logout_today | number}}</h1>
-              </div>
-          </div>
-        </div>
-
-        <div class="col-sm-3">
-          <div class="ibox float-e-margins">
-              <div class="ibox-title">
-                  <span class="label label-success pull-right">ALL</span>
-                  <h5>Total Visitors</h5>
-              </div>
-              <div class="ibox-content">
-                  <h1 class="no-margins">{{visitor.data.total_visitors | number}}</h1>
-              </div>
-          </div>
-        </div>
-
-    </div> -->
-    <div class="row">
-      <div class="col-md-12">
-        <div class="ibox float-e-margins">
-            <div class="ibox-title">
-                <h5>Filter</h5>
             </div>
-            <div class="ibox-content">
-                <div class="row">
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label>Visitors Name</label>
-                      <input ng-model="visitor.filter.visitor_name" type="text" class="form-control">
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label>Date From</label>
-                      <datepicker date-format="yyyy-MM-dd">
-                        <input  ng-model="visitor.filter.date_from" type="text" class="form-control">
-                      </datepicker>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label>Date To</label>
-                      <datepicker date-format="yyyy-MM-dd">
-                        <input ng-model="visitor.filter.date_to" type="text" class="form-control">
-                      </datepicker>
-                    </div>
-                  </div>
-                  
-                </div>
-                <div class="row">
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label>Facility</label>
-                      <select class="form-control" ng-model="visitor.filter.facility" ng-options="a.id as a.name for a in visitor.data.facilities">
-                        <option value="" selected hidden disabled>-Select Facility-</option>
-                      </select>  
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label>Company</label>
-                      <select class="form-control" ng-model="visitor.filter.company" ng-options="a.id as a.name for a in visitor.data.companies | filter:{facility_id:visitor.filter.facility}">
-                        <option value="" selected hidden disabled>-Select Company-</option>
-                      </select>  
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label>Status</label>
-                      <select class="form-control" ng-model="visitor.filter.status" ng-options="a.value as a.label for a in visitor.data.states">
-                        <option value="" selected hidden disabled>-Select Status-</option>
-                      </select>  
-                    </div>
-                  </div>
-                </div>
-                
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Date From</label>
+                <datepicker date-format="yyyy-MM-dd">
+                  <input  ng-model="visitor.filter.date_from" type="text" class="form-control">
+                </datepicker>
+              </div>
             </div>
-            <div class="ibox-footer text-right">
-              <button ng-click="visitor.search(visitor.filter)" class="btn btn-primary">Search</button>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Date To</label>
+                <datepicker date-format="yyyy-MM-dd">
+                  <input ng-model="visitor.filter.date_to" type="text" class="form-control">
+                </datepicker>
+              </div>
             </div>
+
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Facility</label>
+                <select class="form-control" ng-model="visitor.filter.facility" ng-options="a.id as a.name for a in visitor.data.facilities">
+                  <option value="" selected hidden disabled>-Select Facility-</option>
+                </select>  
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Company</label>
+                <select class="form-control" ng-model="visitor.filter.company" ng-options="a.id as a.name for a in visitor.data.companies | filter:{facility_id:visitor.filter.facility}">
+                  <option value="" selected hidden disabled>-Select Company-</option>
+                </select>  
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Status</label>
+                <select class="form-control" ng-model="visitor.filter.status" ng-options="a.value as a.label for a in visitor.data.states">
+                  <option value="" selected hidden disabled>-Select Status-</option>
+                </select>  
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="ibox-footer text-right">
+          <button ng-click="visitor.search(visitor.filter)" class="btn btn-primary">Search</button>
         </div>
       </div>
     </div>
-    <div class="row">
-   		<div class="col-md-12">
-   			<div class="mail-box-header">
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="ibox">
+        <div class="ibox-title">
+          <h5>Visitors</h5>
+        </div>
+        <div class="ibox-content">
 
-                    <div class="form-group pull-right" ng-if="facility.permission.pcreate">
-                    	<a data-toggle="modal" data-target="#createFacility" class="btn btn-primary btn-xs pull-right" >Add Facility</a>
-                    </div>
-                    <h2>
-                        <i class="fa fa-user"></i> Visitors Log
-                    </h2>
+          <div class="table-responsive">
+            <table class="table table-hover table-condensed issue-tracker">
+              <tbody>
+                <tr class="unread">
+                  <td>Visitor Name</td>
+                  <td>Facility</td>
+                  <td>Company</td>
+                  <td>Purpose</td>
+                  <td>Contact Person</td>
+                  <td>Status</td>
+                  <td>Time In</td>
+                  <td>Time Out</td>
+                  <td>Duration</td>
+                </tr>
+                <tr ng-click="visitor.info(a.visitor_id)" class="read" ng-repeat="a in visitor.data.visitors">
+                  <td>{{a.fullname}}</td>
+                  <td>{{a.facility}}</td>
+                  <td>{{a.company}}</td>
+                  <td>{{a.purpose}}</td>
+                  <td>{{a.staff}}</td>
+                  <td>{{(a.time_out) ? 'Logout' : 'On Premise'}}</td>
+                  <td>{{a.created_at | date:'MM/dd/yyyy hh:mm:ss a'}}</td>
+                  <td>{{a.time_out | date:'MM/dd/yyyy hh:mm:ss a'}}</td>
+                  <td ng-if="!a.elapse">{{a.created_at | timeAgo}}</td>
+                  <td ng-if="a.elapse">{{a.elapse}}</td>
+                </tr>
+                <tr>
+                  <td ng-if="visitor.data.visitors.length==0" colspan="9" class="text-center">No records</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
 
-                </div>
-                <div class="mail-box">
-    				<table class="table table-hover table-mail table-condensed">
-    	                <tbody>
-                        <tr class="unread">
-    		                    <td>Visitor Name</td>
-                            <td>Facility</td>
-    		                    <td class="mail-contact">Company</td>
-    		                    <td class="mail-contact">Purpose</td>
-    		                    <td class="mail-contact">Contact Person</td>
-                            <td class="mail-contact">Status</td>
-                            <td class="mail-contact">Time In</td>
-                            <td class="mail-contact">Time Out</td>
-    		                    <td class="mail-contact">Duration</td>
-    		                </tr>
-                        <tr ng-click="visitor.info(a.visitor_id)" class="read" ng-repeat="a in visitor.data.visitors">
-    		                    <td>{{a.fullname}}</td>
-                            <td>{{a.facility}}</td>
-    		                    <td class="mail-contact">{{a.company}}</td>
-    		                    <td class="mail-contact">{{a.purpose}}</td>
-    		                    <td class="mail-contact">{{a.staff}}</td>
-    		                    <td class="mail-contact">{{(a.time_out) ? 'Logout' : 'On Premise'}}</td>
-                            <td>{{a.created_at | date:'MM/dd/yyyy hh:mm:ss a'}}</td>
-                            <td>{{a.time_out | date:'MM/dd/yyyy hh:mm:ss a'}}</td>
-    		                    <td ng-if="!a.elapse" class="mail-contact">{{a.created_at | timeAgo}}</td>
-    		                    <td ng-if="a.elapse" class="mail-contact">{{a.elapse}}</td>
-    		                </tr>
-                        <tr>
-                          <td ng-if="visitor.data.visitors.length==0" colspan="9" class="text-center">No records</td>
-                        </tr>
-    	                </tbody>
-                    </table>
-                </div>
-   		</div>
-   	</div>
-</div>
-
-<div class="modal fade" id="visitorInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-    <form ng-submit="user.create(user.modal)">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Visitor Information</h4>
       </div>
-      <div class="modal-body text-center">
-        <img class="img" ng-src="./secret_upload/{{visitor.modal.info.image}}" alt="">
-        <h1>{{visitor.modal.info.fullname}}</h1>
-        <hr>
-        <table class="table table-bordered">
-          <tr>
-            <th colspan="4">History</th>
-          </tr>
-          <tr>
-            <th>Company</th>
-            <th>Staff</th>
-            <th>Purpose</th>
-            <th>Date</th>
-          </tr>
-          <tr ng-repeat="a in visitor.modal.info.log">
-            <td>{{a.company}}</td>
-            <td>{{a.staff}}</td>
-            <td>{{a.purpose}}</td>
-            <td>{{a.created_at | date:'MMMM dd, yyyy'}}</td>
-          </tr>
-        </table>
-      </div>
-      <div class="modal-footer">
-        <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
-      </div>
-    </form>
     </div>
   </div>
 </div>
+
+
