--- a/app/assets/javascripts/user/index/view.html
+++ b/app/assets/javascripts/user/index/view.html
@@ -59,6 +59,7 @@
                                 <td>Role</td>
                                 <td>Facility</td>
                                 <td>Date Create</td>
+                                <td></td>
                             </tr>
                             <tr class="read" ng-repeat="v in user.data.users">
                                 <td>{{v.id}}</td>
@@ -70,6 +71,10 @@
                                     </small>
                                 </td>
                                 <td class="mail-subject">{{v.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</td>
+                                <td> 
+                                    <button class="btn btn-primary btn-xs" ng-click="user.info(v.id)">View</button>
+                                    <button class="btn btn-danger btn-xs" ng-click="user.remove(v.id, $index )">Delete</button>
+                                </td>
                             </tr>
                             <tr>
                               <td ng-if="user.data.users.length==0" colspan="9" class="text-center">No records</td>
@@ -87,7 +92,7 @@
 <div class="modal fade" id="createUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form ng-submit="user.create(user.modal)">
+            <form>
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">User Information</h4>
@@ -124,7 +129,7 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label>Email Address</label>
-                        <input type="email" class="form-control" ng-model="user.modal.email" required/>
+                        <input ng-disabled="user.mode=='update'" type="email" class="form-control" ng-model="user.modal.email" required/>
                     </div>
                 </div>
             </div>
@@ -157,12 +162,13 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Contact Number: <small>Must begin 63 not 0 e.g 63915 000 1111</small></label>
-                <input type="text" maxlength="12" minlength="12" ng-model="user.modal.contact" class="form-control" required>
+                <input type="text" maxlength="12" minlength="12" ng-model="user.modal.mobile" class="form-control" required>
             </div>
         </div>
         <div class="modal-footer">
             <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
-            <button type="submit" class="btn btn-success">Save</button>
+            <button ng-if="user.mode=='create'" type="submit" ng-click="user.create(user.modal)" class="btn btn-success">Save</button>
+            <button ng-if="user.mode=='update'" type="submit" class="btn btn-success" ng-click="user.update(user.modal)">Update</button>
         </div>
     </form>
 </div>
