--- a/app/assets/javascripts/user/index/view.html
+++ b/app/assets/javascripts/user/index/view.html
@@ -112,13 +112,14 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-md-6" ng-if="user.modal.role!=1 && user.modal.role > 0">
+                    <div class="col-md-6" ng-if="user.modal.role!=1 && user.modal.role > 0" >
                         <div class="form-group">
                             <label class="control-label">Select Facility</label>
                             <select
                             class="form-control"
                             ng-model="user.modal.facility"
                             ng-options="a.id as a.name for a in user.data.facilities"
+                            ng-disabled="user.mode=='update'"
                             >
                             <option value="" hidden selected disabled>-Select Facility-</option>
                         </select>
@@ -137,13 +138,13 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control" ng-model="user.modal.password" required/>
+                        <input type="password" class="form-control" ng-model="user.modal.password"/>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>Confirm Password</label>
-                        <input type="password" class="form-control" ng-model="user.modal.password1" required/>
+                        <input type="password" class="form-control" ng-model="user.modal.password1"/>
                     </div>
                 </div>
             </div>
