--- a/app/assets/javascripts/visitor_kiosk/index/view.html
+++ b/app/assets/javascripts/visitor_kiosk/index/view.html
@@ -29,78 +29,83 @@
 			</div>
 		</div>
 		<div ng-if="kiosk_index.stage ==2" class="new_visitor_wrapper">
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>First Name</label>
-						<input type="text" ng-model="kiosk_index.visitor.fname" class="form-control">
+			<form ng-submit="kiosk_index.loginVisitor()">
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label>First Name</label>
+							<input type="text" ng-model="kiosk_index.visitor.fname" class="form-control" required>
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label>Last Name</label>
+							<input type="text" ng-model="kiosk_index.visitor.lname" class="form-control" required>
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label>Middle Name</label>
+							<input type="text" ng-model="kiosk_index.visitor.mname" class="form-control" required>
+						</div>
 					</div>
 				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>Last Name</label>
-						<input type="text" ng-model="kiosk_index.visitor.lname" class="form-control">
+
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label>Company</label>
+							<select class="form-control" ng-model="kiosk_index.visitor.company"
+								ng-options="a.id as a.name for a in kiosk_index.companies"
+								ng-change="kiosk_index.getCompanyStaff(kiosk_index.visitor.company)"
+								required
+							>
+								<option value="" hidden disabled selected>-Select Company-</option>
+							</select>
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label>Contact Person</label>
+							<select class="form-control" ng-model="kiosk_index.visitor.staff"
+								ng-options="a.id as a.name for a in kiosk_index.staffs"
+								required
+							>
+								<option value="" hidden disabled selected>-Select Staff-</option>
+							</select>
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label>Purpose</label>
+							<input type="text" class="form-control" ng-model="kiosk_index.visitor.purpose" required>
+						</div>
 					</div>
 				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>Middle Name</label>
-						<input type="text" ng-model="kiosk_index.visitor.mname" class="form-control">
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="form-group">
+							<a ng-click="kiosk_index.openCamera()" class="btn btn-success btn-block">Take Photo of Visitor</a>
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">
+							<a ng-click="kiosk_index.loadQrCamera()" class="btn btn-success btn-block">Attach Identification</a>
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">
+							<a class="btn btn-danger btn-block" ng-click="kiosk_index.cancel_visitor()">Cancel Visitor</a>
+						</div>
+					</div>
+					
+				</div>
+				<div class="row">
+					<div class="col-sm-12 text-center">
+						<button type="submit" class="btn btn-primary" >LOGIN VISITOR</button>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>Company</label>
-						<select class="form-control" ng-model="kiosk_index.visitor.company"
-							ng-options="a.id as a.name for a in kiosk_index.companies"
-							ng-change="kiosk_index.getCompanyStaff(kiosk_index.visitor.company)"
-						>
-							<option value="" hidden disabled selected>-Select Company-</option>
-						</select>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>Contact Person</label>
-						<select class="form-control" ng-model="kiosk_index.visitor.staff"
-							ng-options="a.id as a.name for a in kiosk_index.staffs"
-						>
-							<option value="" hidden disabled selected>-Select Staff-</option>
-						</select>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>Purpose</label>
-						<input type="text" class="form-control" ng-model="kiosk_index.visitor.purpose">
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="form-group">
-						<button ng-click="kiosk_index.openCamera()" class="btn btn-success btn-block">Take Photo of Visitor</button>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<button ng-click="kiosk_index.loadQrCamera()" class="btn btn-success btn-block">Attach Identification</button>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<button class="btn btn-danger btn-block" ng-click="kiosk_index.cancel_visitor()">Cancel Visitor</button>
-					</div>
-				</div>
-				
-			</div>
-			<div class="row">
-				<div class="col-sm-12 text-center">
-					<button class="btn btn-primary">LOGIN VISITOR</button>
-				</div>
-			</div>
+			</form>
 		</div>
 		
 	</div>
